asm_tests/other_testfiles/invalid_files/error63.s
.name "MORO"
.comment "MORJESTA!"

kissa: 
		sub r1,r;1 r1
		live     %12 
		lfork %:kissa
